deploy/manifests/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyan-api-server-blue
  labels:
    app: cyan-api-server
    slot: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyan-api-server
      slot: blue
  template:
    metadata:
      labels:
        app: cyan-api-server
        slot: blue
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: server
          image: "xcreuwcyan.azurecr.io/cyanserver:281"
          imagePullPolicy: Always
          lifecycle: 
            preStop:
              httpGet:
                path: /api/podTerminate
                port: 3000
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/getVersion
              port: http
          readinessProbe:
            httpGet:
              path: /api/getVersion
              port: http
