deploy/manifests/service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyan-api-server-production
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    slot: blue
