deploy/manifests/ingress-agic-staging.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: agic-cyan-api-server-staging
  annotations:
      kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: staging.51.105.197.234.nip.io
    http:
      paths:
      - backend:
          serviceName: cyan-api-server-staging
          servicePort: 3000
